Added Maven module for Java5 parser

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <modules>
     <module>javacc</module>
     <module>javacc-examples</module>
+    <module>javacc-example-java</module>
     <!--<module>javacc-maven-plugin</module>-->
   </modules>
   <name>JavaCC</name>
