--- a/javacc/src/main/resources/templates/ParseException.template
+++ b/javacc/src/main/resources/templates/ParseException.template
@@ -8,30 +8,12 @@
  * mechanisms so long as you retain the public fields.
  */
 public class ParseException extends Exception {
-
   /**
    * The version identifier for this Serializable class.
    * Increment only if the <i>serialized</i> form of the
    * class changes.
    */
   private static final long serialVersionUID = 1L;
-
-  /**
-   * This constructor is used by the method "generateParseException"
-   * in the generated parser.  Calling this constructor generates
-   * a new object of this type with the fields "currentToken",
-   * "expectedTokenSequences", and "tokenImage" set.
-   */
-  public ParseException(Token currentTokenVal,
-                        int[][] expectedTokenSequencesVal,
-                        String[] tokenImageVal
-                       )
-  {
-    super(initialise(currentTokenVal, expectedTokenSequencesVal, tokenImageVal));
-    currentToken = currentTokenVal;
-    expectedTokenSequences = expectedTokenSequencesVal;
-    tokenImage = tokenImageVal;
-  }
 
   /**
    * The following constructors are for use by you for whatever
@@ -42,37 +24,55 @@ public class ParseException extends Exception {
    * relevant information.  The JavaCC generated code does not use
    * these constructors.
    */
-
   public ParseException() {
-    super();
+    currentToken = null;
+    expectedTokenSequences = null;
+    tokenImage = null;
   }
 
   /** Constructor with message. */
   public ParseException(String message) {
     super(message);
+    currentToken = null;
+    expectedTokenSequences = null;
+    tokenImage = null;
   }
 
+  /**
+   * This constructor is used by the method "generateParseException"
+   * in the generated parser.  Calling this constructor generates
+   * a new object of this type with the fields "currentToken",
+   * "expectedTokenSequences", and "tokenImage" set.
+   */
+  public ParseException(Token currentTokenVal,
+                        int[][] expectedTokenSequencesVal,
+                        String[] tokenImageVal) {
+    super(initialise(currentTokenVal, expectedTokenSequencesVal, tokenImageVal));
+    currentToken = currentTokenVal;
+    expectedTokenSequences = expectedTokenSequencesVal;
+    tokenImage = tokenImageVal;
+  }
 
   /**
    * This is the last token that has been consumed successfully.  If
    * this object has been created due to a parse error, the token
-   * followng this token will (therefore) be the first error token.
+   * following this token will (therefore) be the first error token.
    */
-  public Token currentToken;
+  public final Token currentToken;
 
   /**
    * Each entry in this array is an array of integers.  Each array
    * of integers represents a sequence of tokens (by their ordinal
    * values) that is expected at this point of the parse.
    */
-  public int[][] expectedTokenSequences;
+  public final int[][] expectedTokenSequences;
 
   /**
    * This is a reference to the "tokenImage" array of the generated
    * parser within which the parse error occurred.  This array is
    * defined in the generated ...Constants interface.
    */
-  public String[] tokenImage;
+  public final String[] tokenImage;
 
   /**
    * It uses "currentToken" and "expectedTokenSequences" to generate a parse
@@ -109,7 +109,7 @@ public class ParseException extends Exception {
       }
       retval += " " + tokenImage[tok.kind];
       retval += " \"";
-      retval += add_escapes(tok.image);
+      retval += addEscapes(tok.image);
       retval += " \"";
       tok = tok.next;
     }
@@ -129,56 +129,56 @@ public class ParseException extends Exception {
   /**
    * The end of line string for this machine.
    */
-  protected String eol = System.getProperty("line.separator", "\n");
+  private static final String eol = System.getProperty("line.separator", "\n");
 
   /**
    * Used to convert raw characters to their escaped version
    * when these raw version cannot be used as part of an ASCII
    * string literal.
    */
-  static String add_escapes(String str) {
-      StringBuffer retval = new StringBuffer();
+  static String addEscapes(String str) {
+      final StringBuffer b = new StringBuffer();
       char ch;
       for (int i = 0; i < str.length(); i++) {
-        switch (str.charAt(i))
-        {
+        switch (str.charAt(i)) {
            case 0 :
               continue;
            case '\b':
-              retval.append("\\b");
+              b.append("\\b");
               continue;
            case '\t':
-              retval.append("\\t");
+              b.append("\\t");
               continue;
            case '\n':
-              retval.append("\\n");
+              b.append("\\n");
               continue;
            case '\f':
-              retval.append("\\f");
+              b.append("\\f");
               continue;
            case '\r':
-              retval.append("\\r");
+              b.append("\\r");
               continue;
            case '\"':
-              retval.append("\\\"");
+              b.append("\\\"");
               continue;
            case '\'':
-              retval.append("\\\'");
+              b.append("\\\'");
               continue;
            case '\\':
-              retval.append("\\\\");
+              b.append("\\\\");
               continue;
            default:
               if ((ch = str.charAt(i)) < 0x20 || ch > 0x7e) {
-                 String s = "0000" + Integer.toString(ch, 16);
-                 retval.append("\\u" + s.substring(s.length() - 4, s.length()));
-              } else {
-                 retval.append(ch);
+                 final String s = "0000" + Integer.toString(ch, 16);
+                 b.append("\\u" + s.substring(s.length() - 4, s.length()));
+              }
+              else {
+                 b.append(ch);
               }
               continue;
         }
       }
-      return retval.toString();
+      return b.toString();
    }
 
 }
