--- a/javacc/src/main/resources/templates/JavaCharStream.template
+++ b/javacc/src/main/resources/templates/JavaCharStream.template
@@ -3,81 +3,59 @@
  * contain only ASCII characters (with java-like unicode escape processing).
  */
 ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharStream {
-  static final int hexValue(char c) throws java.io.IOException {
-    switch(c) {
-       case '0' :
-          return 0;
-       case '1' :
-          return 1;
-       case '2' :
-          return 2;
-       case '3' :
-          return 3;
-       case '4' :
-          return 4;
-       case '5' :
-          return 5;
-       case '6' :
-          return 6;
-       case '7' :
-          return 7;
-       case '8' :
-          return 8;
-       case '9' :
-          return 9;
-
-       case 'a' :
-       case 'A' :
-          return 10;
-       case 'b' :
-       case 'B' :
-          return 11;
-       case 'c' :
-       case 'C' :
-          return 12;
-       case 'd' :
-       case 'D' :
-          return 13;
-       case 'e' :
-       case 'E' :
-          return 14;
-       case 'f' :
-       case 'F' :
-          return 15;
-    }
-
-    throw new java.io.IOException(); // Should never come here
-  }
-
-/** Position in buffer. */
-  public int bufPos = -1;
   int bufSize;
   int available;
   int tokenBegin;
+  int bufPos = -1;
 #if KEEP_LINE_COLUMN
-  protected int bufLine[];
-  protected int bufColumn[];
+  int bufLine[];
+  int bufColumn[];
 
-  protected int column = 0;
-  protected int line = 1;
+  int column = 0;
+  int line = 1;
 
-  protected boolean prevCharIsCR = false;
-  protected boolean prevCharIsLF = false;
+  boolean prevCharIsCR = false;
+  boolean prevCharIsLF = false;
 #fi
 
-  protected java.io.Reader inputStream;
+  final java.io.Reader inputStream;
 
-  protected char[] nextCharBuf;
-  protected char[] buffer;
-  protected int maxNextCharInd = 0;
-  protected int nextCharInd = -1;
-  protected int inBuf = 0;
-  protected int tabSize = 8;
+  char[] nextCharBuf;
+  char[] buffer;
+  int maxNextCharInd = 0;
+  int nextCharInd = -1;
+  int inBuf = 0;
+  int tabSize = 8;
+  int beginOffset, endOffset;
 
-  protected void setTabSize(int i) { tabSize = i; }
-  protected int getTabSize(int i) { return tabSize; }
+  public void setTabSize(int i) { tabSize = i; }
+  public int getTabSize(int i) { return tabSize; }
 
-  protected void expandBuff(boolean wrapAround) {
+  public JavaCharStream(java.io.Reader reader) {
+    this(reader, 1, 1, 4096);
+  }
+
+  public JavaCharStream(java.io.Reader reader, int startLine, int startColumn) {
+    this(reader, startLine, startColumn, 4096);
+  }
+
+  public JavaCharStream(java.io.Reader reader, int startLine, int startColumn, int bufferSize) {
+    inputStream = reader;
+#if KEEP_LINE_COLUMN
+    line = startLine;
+    column = startColumn - 1;
+#fi
+
+    available = bufSize = bufferSize;
+    buffer = new char[bufferSize];
+#if KEEP_LINE_COLUMN
+    bufLine = new int[bufferSize];
+    bufColumn = new int[bufferSize];
+#fi
+    nextCharBuf = new char[4096];
+  }
+
+  void expandBuff(boolean wrapAround) {
     char[] newBuffer = new char[bufSize + 2048];
 #if KEEP_LINE_COLUMN
     int newBufLine[] = new int[bufSize + 2048];
@@ -125,14 +103,13 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     tokenBegin = 0;
   }
 
-  protected void fillBuff() throws java.io.IOException {
+  void fillBuff() throws java.io.IOException {
     int i;
     if (maxNextCharInd == 4096)
       maxNextCharInd = nextCharInd = 0;
 
     try {
-      if ((i = inputStream.read(nextCharBuf, maxNextCharInd,
-                                          4096 - maxNextCharInd)) == -1) {
+      if ((i = inputStream.read(nextCharBuf, maxNextCharInd, 4096 - maxNextCharInd)) == -1) {
         inputStream.close();
         throw new java.io.IOException();
       }
@@ -155,17 +132,20 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     }
   }
 
-  protected char readByte() throws java.io.IOException {
+  char readByte() throws java.io.IOException {
     if (++nextCharInd >= maxNextCharInd)
       fillBuff();
 
     return nextCharBuf[nextCharInd];
   }
 
-/** @return starting character for token. */
   public char beginToken() throws java.io.IOException {
+    beginOffset = endOffset;
+
     if (inBuf > 0) {
       --inBuf;
+
+      endOffset++;
 
       if (++bufPos == bufSize)
         bufPos = 0;
@@ -180,7 +160,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     return readChar();
   }
 
-  protected void adjustBuffSize() {
+  void adjustBuffSize() {
     if (available == bufSize) {
       if (tokenBegin > 2048) {
         bufPos = 0;
@@ -198,7 +178,9 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
   }
 #if KEEP_LINE_COLUMN
 
-  protected void updateLineColumn(char c) {
+  void updateLineColumn(char c) {
+    endOffset++;
+
     column++;
 
     if (prevCharIsLF) {
@@ -234,10 +216,11 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
   }
 #fi
 
-/** Read a character. */
   public char readChar() throws java.io.IOException {
     if (inBuf > 0) {
       --inBuf;
+
+      endOffset++;
 
       if (++bufPos == bufSize)
         bufPos = 0;
@@ -333,34 +316,14 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     }
   }
 
-/** Get end column. */
-  public int getEndColumn() {
-#if KEEP_LINE_COLUMN
-    return bufColumn[bufPos];
-#else
-    return -1;
-#fi
+  public int getBeginOffset() {
+    return beginOffset;
   }
 
-/** Get end line. */
-  public int getEndLine() {
-#if KEEP_LINE_COLUMN
-    return bufLine[bufPos];
-#else
-    return -1;
-#fi
+  public int getEndOffset() {
+    return endOffset;
   }
 
-/** @return column of token start */
-  public int getBeginColumn() {
-#if KEEP_LINE_COLUMN
-    return bufColumn[tokenBegin];
-#else
-    return -1;
-#fi
-  }
-
-/** @return line number of token start */
   public int getBeginLine() {
 #if KEEP_LINE_COLUMN
     return bufLine[tokenBegin];
@@ -369,41 +332,37 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
 #fi
   }
 
-/** Retreat. */
+  public int getBeginColumn() {
+#if KEEP_LINE_COLUMN
+    return bufColumn[tokenBegin];
+#else
+    return -1;
+#fi
+  }
+
+  public int getEndLine() {
+#if KEEP_LINE_COLUMN
+    return bufLine[bufPos];
+#else
+    return -1;
+#fi
+  }
+
+  public int getEndColumn() {
+#if KEEP_LINE_COLUMN
+    return bufColumn[bufPos];
+#else
+    return -1;
+#fi
+  }
+
   public void backup(int amount) {
+    endOffset -= amount;
     inBuf += amount;
     if ((bufPos -= amount) < 0)
       bufPos += bufSize;
   }
 
-/** Constructor. */
-  public JavaCharStream(java.io.Reader reader, int startLine, int startColumn, int bufferSize) {
-    inputStream = reader;
-#if KEEP_LINE_COLUMN
-    line = startLine;
-    column = startColumn - 1;
-#fi
-
-    available = bufSize = bufferSize;
-    buffer = new char[bufferSize];
-#if KEEP_LINE_COLUMN
-    bufLine = new int[bufferSize];
-    bufColumn = new int[bufferSize];
-#fi
-    nextCharBuf = new char[4096];
-  }
-
-/** Constructor. */
-  public JavaCharStream(java.io.Reader reader, int startLine, int startColumn) {
-    this(reader, startLine, startColumn, 4096);
-  }
-
-/** Constructor. */
-  public JavaCharStream(java.io.Reader reader) {
-    this(reader, 1, 1, 4096);
-  }
-
-  /** @return token image as String */
   public String getImage() {
     if (bufPos >= tokenBegin)
       return new String(buffer, tokenBegin, bufPos - tokenBegin + 1);
@@ -411,7 +370,6 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
       return new String(buffer, tokenBegin, bufSize - tokenBegin) + new String(buffer, 0, bufPos + 1);
   }
 
-  /** @return suffix */
   public char[] getSuffix(int len) {
     char[] ret = new char[len];
 
@@ -425,7 +383,6 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     return ret;
   }
 
-  /** Set buffers back to null when finished. */
   public void close() {
     nextCharBuf = null;
     buffer = null;
@@ -439,7 +396,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
   /**
    * Method to adjust line and column numbers for the start of a token.
    */
-  public void adjustBeginLineColumn(int newLine, int newColumn) {
+  void adjustBeginLineColumn(int newLine, int newColumn) {
     int start = tokenBegin;
     int len;
 
@@ -478,4 +435,48 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
   }
 
 #fi
+
+  static final int hexValue(char c) throws java.io.IOException {
+    switch(c) {
+       case '0' :
+          return 0;
+       case '1' :
+          return 1;
+       case '2' :
+          return 2;
+       case '3' :
+          return 3;
+       case '4' :
+          return 4;
+       case '5' :
+          return 5;
+       case '6' :
+          return 6;
+       case '7' :
+          return 7;
+       case '8' :
+          return 8;
+       case '9' :
+          return 9;
+       case 'a' :
+       case 'A' :
+          return 10;
+       case 'b' :
+       case 'B' :
+          return 11;
+       case 'c' :
+       case 'C' :
+          return 12;
+       case 'd' :
+       case 'D' :
+          return 13;
+       case 'e' :
+       case 'E' :
+          return 14;
+       case 'f' :
+       case 'F' :
+          return 15;
+    }
+    throw new java.io.IOException(); // Should never come here
+  }
 }
