--- a/javacc/src/main/resources/templates/JavaCharStream.template
+++ b/javacc/src/main/resources/templates/JavaCharStream.template
@@ -139,7 +139,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
     return nextCharBuf[nextCharInd];
   }
 
-  public char beginToken() throws java.io.IOException {
+  public int beginToken() throws java.io.IOException {
     beginOffset = endOffset;
 
     if (inBuf > 0) {
@@ -216,7 +216,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharS
   }
 #fi
 
-  public char readChar() throws java.io.IOException {
+  public int readChar() throws java.io.IOException {
     if (inBuf > 0) {
       --inBuf;
 
