--- a/javacc/src/main/resources/templates/CharStream.template
+++ b/javacc/src/main/resources/templates/CharStream.template
@@ -14,13 +14,14 @@
  */
 ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.Closeable {
   /**
-   * Returns the next character that marks the beginning of the next token.
+   * Marks the beginning of the next token. It means, the next
+   * character returned will belong to the next token.
    * All characters must remain in the buffer between two successive calls
    * to this method to implement backup correctly.
    *
    * @throws java.io.IOException If any I/O error occurs.
    */
-  int beginToken() throws java.io.IOException;
+  void beginToken() throws java.io.IOException;
 
   /**
    * Returns the next character from the selected input.  The method
@@ -40,6 +41,24 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.
   void backup(int amount);
 
   /**
+   * Returns a string made up of characters from the marked token beginning
+   * to the current buffer position.
+   */
+  String getImage();
+
+  /**
+   * Returns an array of characters that make up the suffix of length 'length' for
+   * the currently matched token. This is used to build up the matched string
+   * for use in actions in the case of MORE. A simple and inefficient
+   * implementation of this is as follows :
+   * <pre>
+   * String t = getImage();
+   * return t.sunSequence(t.length() - length, t.length()).toCharArray();
+   * </pre>
+   */
+  char[] getSuffix(int length);
+
+  /**
    * Returns index of the first character for current token (being
    * matched after the last call to {@link #beginToken beginToken()}).
    */
@@ -50,6 +69,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.
    * matched after the last call to {@link #beginToken beginToken()}).
    */
   int getEndOffset();
+#if KEEP_LINE_COLUMN
 
   /**
    * Returns the line number of the first character for current token (being
@@ -74,34 +94,11 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.
    * matched after the last call to {@link #beginToken beginToken()}).
    */
   int getEndLine();
-
-  /**
-   * Returns a string made up of characters from the marked token beginning
-   * to the current buffer position. Implementations have the choice of returning
-   * anything that they want to. For example, for efficiency, one might decide
-   * to just return null, which is a valid implementation.
-   */
-  String getImage();
-
-  /**
-   * Returns an array of characters that make up the suffix of length 'length' for
-   * the currently matched token. This is used to build up the matched string
-   * for use in actions in the case of MORE. A simple and inefficient
-   * implementation of this is as follows :
-   * <pre>
-   * {
-   *    String t = getImage();
-   *    return t.substring(t.length() - length, t.length()).toCharArray();
-   * }
-   * </pre>
-   */
-  char[] getSuffix(int length);
+#fi
 
   /**
    * The lexer calls this function to indicate that it is done with the stream
    * and hence implementations can free any resources held by this class.
-   * Again, the body of this function can be just empty and it will not
-   * affect the lexer's operation.
    */
   void close() throws java.io.IOException;
 }
