--- a/javacc/src/main/resources/templates/TokenMgrError.template
+++ b/javacc/src/main/resources/templates/TokenMgrError.template
@@ -1,111 +1,51 @@
-/** Token Manager Error. */
-${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class TokenMgrError extends Error
-{
+/**
+ * If you have designed your tokens well, the token manager
+ * is never expected to throw this exception.
+ * Therefore it extends Error rather than Exception.
+ */
+${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class TokenMgrError extends Error {
+/** lexical error occurred. */
+  public static final int LEXICAL_ERROR = 0;
 
-  /**
-   * The version identifier for this Serializable class.
-   * Increment only if the <i>serialized</i> form of the
-   * class changes.
-   */
-  private static final long serialVersionUID = 1L;
+  /** Tried to change to an invalid lexical state. */
+  public static final int INVALID_LEXICAL_STATE = 2;
 
-  /*
-   * Ordinals for various reasons why an Error of this type can be thrown.
-   */
-
-  /**
-   * Lexical error occurred.
-   */
-  static final int LEXICAL_ERROR = 0;
-
-  /**
-   * An attempt was made to create a second instance of a static token manager.
-   */
-  static final int STATIC_LEXER_ERROR = 1;
-
-  /**
-   * Tried to change to an invalid lexical state.
-   */
-  static final int INVALID_LEXICAL_STATE = 2;
-
-  /**
-   * Detected (and bailed out of) an infinite loop in the token manager.
-   */
-  static final int LOOP_DETECTED = 3;
+  /** Detected (and bailed out of) an infinite loop in the token manager. */
+  public static final int LOOP_DETECTED = 3;
 
   /**
    * Indicates the reason why the exception is thrown. It will have
    * one of the above 4 values.
    */
-  int errorCode;
+  private final int errorCode;
 
-  /**
-   * Replaces unprintable characters by their escaped (or unicode escaped)
-   * equivalents in the given string
-   */
-  protected static final String addEscapes(String str) {
-    StringBuffer retval = new StringBuffer();
-    char ch;
-    for (int i = 0; i < str.length(); i++) {
-      switch (str.charAt(i))
-      {
-        case 0 :
-          continue;
-        case '\b':
-          retval.append("\\b");
-          continue;
-        case '\t':
-          retval.append("\\t");
-          continue;
-        case '\n':
-          retval.append("\\n");
-          continue;
-        case '\f':
-          retval.append("\\f");
-          continue;
-        case '\r':
-          retval.append("\\r");
-          continue;
-        case '\"':
-          retval.append("\\\"");
-          continue;
-        case '\'':
-          retval.append("\\\'");
-          continue;
-        case '\\':
-          retval.append("\\\\");
-          continue;
-        default:
-          if ((ch = str.charAt(i)) < 0x20 || ch > 0x7e) {
-            String s = "0000" + Integer.toString(ch, 16);
-            retval.append("\\u" + s.substring(s.length() - 4, s.length()));
-          } else {
-            retval.append(ch);
-          }
-          continue;
-      }
-    }
-    return retval.toString();
+  /** Constructor with message and reason. */
+  public TokenMgrError(String message, int errorCode) {
+    super(message);
+    this.errorCode = errorCode;
   }
 
   /**
-   * Returns a detailed message for the Error when it is thrown by the
-   * token manager to indicate a lexical error.
-   * Parameters :
-   *    EOFSeen     : indicates if EOF caused the lexical error
-   *    curLexState : lexical state in which this error occurred
-   *    errorLine   : line number when the error occurred
-   *    errorColumn : column number when the error occurred
-   *    errorAfter  : prefix that was seen before this error occurred
-   *    curchar     : the offending character
-   * Note: You can customize the lexical error message by modifying this method.
+   * Full Constructor.
+   *
+   * @param eof      Indicates if EOF caused the lexical error.
+   * @param lexState Lexical state in which this error occurred.
+   * @param line     Line number when the error occurred.
+   * @param column   Column number when the error occurred.
+   * @param prefix   Prefix that was seen before this error occurred.
+   * @param curChar  The offending character.
    */
-  protected static String LexicalError(boolean EOFSeen, int lexState, int errorLine, int errorColumn, String errorAfter, int curChar) {
-    return("Lexical error at line " +
-          errorLine + ", column " +
-          errorColumn + ".  Encountered: " +
-          (EOFSeen ? "<EOF> " : ("\"" + addEscapes(String.valueOf(curChar)) + "\"") + " (" + curChar + "), ") +
-          "after : \"" + addEscapes(errorAfter) + "\"");
+  public TokenMgrError(boolean eof, int lexState, int line, int column, String prefix, int curChar, int errorCode) {
+    this(lexicalError(eof, lexState, line, column, prefix, curChar), errorCode);
+  }
+
+  /**
+   * Gets error code.
+   *
+   * @return The reason why this exception has been thrown.
+   */
+  public int getErrorCode() {
+    return errorCode;
   }
 
   /**
@@ -113,30 +53,81 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class TokenMgrError extends Error
    * For example, cases like LOOP_DETECTED and INVALID_LEXICAL_STATE are not
    * of end-users concern, so you can return something like :
    *
-   *     "Internal Error : Please file a bug report .... "
+   * "Internal Error : Please file a bug report .... "
    *
    * from this method for such cases in the release version of your parser.
+   *
+   * @return Descriptive error message.
    */
   public String getMessage() {
     return super.getMessage();
   }
 
-  /*
-   * Constructors of various flavors follow.
+  /**
+   * Returns a detailed message for the Error when it is thrown by the
+   * token manager to indicate a lexical error.
+   *
+   * @param eof      Indicates if EOF caused the lexical error.
+   * @param lexState Lexical state in which this error occurred.
+   * @param line     Line number when the error occurred.
+   * @param column   Column number when the error occurred.
+   * @param prefix   Prefix that was seen before this error occurred.
+   * @param curChar  The offending character.
    */
-
-  /** No arg constructor. */
-  public TokenMgrError() {
+  protected static String lexicalError(boolean eof, int lexState, int line, int column, String prefix, int curChar) {
+    return "Lexical error at line " +
+        line + ", column " +
+        column + ".  Encountered: " +
+        (eof ? "<EOF> " : "\"" + escape(String.valueOf(curChar)) + "\"" + " (" + curChar + "), ") +
+        "after : \"" + escape(prefix) + "\"";
   }
 
-  /** Constructor with message and reason. */
-  public TokenMgrError(String message, int reason) {
-    super(message);
-    errorCode = reason;
-  }
-
-  /** Full Constructor. */
-  public TokenMgrError(boolean EOFSeen, int lexState, int errorLine, int errorColumn, String errorAfter, int curChar, int reason) {
-    this(LexicalError(EOFSeen, lexState, errorLine, errorColumn, errorAfter, curChar), reason);
+  /**
+   * Replaces unprintable characters by their escaped (or unicode escaped)
+   * equivalents in the given string
+   */
+  protected static String escape(final String string) {
+    final StringBuffer b = new StringBuffer(string.length());
+    char ch;
+    for (int i = 0; i < string.length(); i++) {
+      switch (string.charAt(i)) {
+        case 0:
+          continue;
+        case '\b':
+          b.append("\\b");
+          continue;
+        case '\t':
+          b.append("\\t");
+          continue;
+        case '\n':
+          b.append("\\n");
+          continue;
+        case '\f':
+          b.append("\\f");
+          continue;
+        case '\r':
+          b.append("\\r");
+          continue;
+        case '\"':
+          b.append("\\\"");
+          continue;
+        case '\'':
+          b.append("\\\'");
+          continue;
+        case '\\':
+          b.append("\\\\");
+          continue;
+        default:
+          if ((ch = string.charAt(i)) < 0x20 || ch > 0x7e) {
+            final String s = "0000" + Integer.toString(ch, 16);
+            b.append("\\u").append(s.substring(s.length() - 4, s.length()));
+          }
+          else {
+            b.append(ch);
+          }
+          continue;
+      }
+    }
+    return b.toString();
   }
 }
