--- a/javacc/src/main/resources/templates/ParseException.template
+++ b/javacc/src/main/resources/templates/ParseException.template
@@ -109,7 +109,7 @@ public class ParseException extends Exception {
       }
       retval += " " + tokenImage[tok.kind];
       retval += " \"";
-      retval += addEscapes(tok.image);
+      retval += escape(tok.image);
       retval += " \"";
       tok = tok.next;
     }
@@ -136,7 +136,7 @@ public class ParseException extends Exception {
    * when these raw version cannot be used as part of an ASCII
    * string literal.
    */
-  static String addEscapes(String str) {
+  static String escape(String str) {
       final StringBuffer b = new StringBuffer();
       char ch;
       for (int i = 0; i < str.length(); i++) {
@@ -180,5 +180,4 @@ public class ParseException extends Exception {
       }
       return b.toString();
    }
-
 }
